cel/M0003-metadata-portefaix-labels/policy-M0003.yaml
# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: m0003.metadata.portefaix.xyz
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    # - apiGroups:   [""]
    #   apiVersions: ["v1"]
    #   operations:  ["CREATE", "UPDATE"]
    #   resources:   ["namespaces"]
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
  - expression: >
      'portefaix.xyz/version' in object.metadata.labels
    message: "Portefaix recommended labels is required."
  auditAnnotations:
  - key: "metadata-portefaix-recommended-labels"
    valueExpression: "Portefaix recommended labels is required"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: m0003.container.portefaix.xyz
spec:
  policyName: m0003.container.portefaix.xyz
  validationActions: [Warn, Audit]
